Begin search of certificates

--- a/CertificatesTool/CertificatesTool.csproj
+++ b/CertificatesTool/CertificatesTool.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Components\ListViewDoubleBuffered.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Extensions\X509CertificateExtensions.cs" />
     <Compile Include="Models\CertificatesStoreLocation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
