--- a/CertificatesTool/CertificatesTool.csproj
+++ b/CertificatesTool/CertificatesTool.csproj
@@ -54,10 +54,12 @@
     </Compile>
     <Compile Include="Extensions\ListViewItemExtension.cs" />
     <Compile Include="Extensions\X509CertificateExtensions.cs" />
+    <Compile Include="Models\CertificateInfoModel.cs" />
     <Compile Include="Models\CertificatesStoreLocation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CertificatesRepository.cs" />
+    <Compile Include="Services\CryptographyService.cs" />
     <Compile Include="Views\CertificatesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,8 +100,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
