--- a/CertificatesTool/CertificatesTool.csproj
+++ b/CertificatesTool/CertificatesTool.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CertificatesRepository.cs" />
     <Compile Include="Services\CryptographyService.cs" />
+    <Compile Include="Services\RegistryService.cs" />
     <Compile Include="Views\CertificatesForm.cs">
       <SubType>Form</SubType>
     </Compile>
